--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,25 @@
         </dependency>
     </dependencies>
 
+    <!-- 环境参数 -->
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <activatedProperties>dev</activatedProperties>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <activatedProperties>prod</activatedProperties>
+            </properties>
+        </profile>
+    </profiles>
+
     <!-- 构建配置 -->
     <build>
         <plugins>
