--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -1,22 +1,45 @@
 spring:
   application:
-    name: gateway-service
+    name: gateway
+  profiles:
+    active: @activatedProperties@
 
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
   cloud:
     nacos:
       server-addr: 192.168.1.97:8848
       username: cloud_developer
       password: 745700Yxy@
-      # 配置中心
       config:
         file-extension: yaml
-        # 引入共享配置
+        namespace: cloud
         shared-configs:
           - data-id: shared-config.yaml
             group: DEFAULT_GROUP
             refresh: true
-        namespace: cloud
-      # 服务发现
       discovery:
-        server-addr: 192.168.1.97:8848
         namespace: cloud
+
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+  cloud:
+    nacos:
+      server-addr: 127.0.0.1:8848
+      username: cloud_developer
+      password: 745700Yxy@
+      config:
+        file-extension: yaml
+        namespace: cloud-prod
+        shared-configs:
+          - data-id: shared-config.yaml
+            group: DEFAULT_GROUP
+            refresh: true
+      discovery:
+        namespace: cloud-prod
