--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,11 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <!-- Spring Boot 版本 -->
-        <spring-boot.version>3.2.0</spring-boot.version>
+        <spring-boot.version>3.2.1</spring-boot.version>
         <!-- Spring Cloud 版本 -->
         <spring-cloud.version>2023.0.0</spring-cloud.version>
         <!-- Spring Cloud Alibaba 版本 -->
-        <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
+        <spring-cloud-alibaba.version>2023.0.1.2</spring-cloud-alibaba.version>
         <!-- 数据库相关 -->
         <postgresql.version>42.7.1</postgresql.version>
         <mybatis-plus.version>3.5.15</mybatis-plus.version>
@@ -265,6 +265,23 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
+                <!-- 指定使用 @ 作为占位符分隔符 -->
+                <includes>
+                    <include>**/*.yml</include>
+                    <include>**/*.yaml</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>**/*.yml</exclude>
+                    <exclude>**/*.yaml</exclude>
+                    <exclude>**/*.properties</exclude>
+                    <exclude>**/*.xml</exclude>
+                </excludes>
             </resource>
         </resources>
     </build>
